--- a/LDA.ipynb
+++ b/LDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,17 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<8961258x33736 sparse matrix of type '<class 'numpy.int64'>'\n",
-       "\twith 61759505 stored elements in Compressed Sparse Row format>"
+       "<8430264x430 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 107249548 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,18 +34,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tweets 8430264\n",
+      "Russian 2283309\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
-    "df = pickle.load( open( \"files/df.pickle\", \"rb\" ) )"
+    "df = pickle.load( open( \"files/df.pickle\", \"rb\" ) )\n",
+    "df['Tweet'] = df['Tweet'].astype(str)\n",
+    "df['Len'] = df['Tweet'].str.split().apply(len)\n",
+    "df = df[df['Len']>=4]\n",
+    "print('tweets',df.shape[0])\n",
+    "print('Russian',np.sum(df['Category']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,29 +72,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'LatentDirichletAllocation' object has no attribute 'transfrom'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-8-1c9c35d30512>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mXX_train\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mXX_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtransfrom\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'LatentDirichletAllocation' object has no attribute 'transfrom'"
-     ]
+     "data": {
+      "text/plain": [
+       "LatentDirichletAllocation(batch_size=128, doc_topic_prior=None,\n",
+       "                          evaluate_every=-1, learning_decay=0.7,\n",
+       "                          learning_method='batch', learning_offset=10.0,\n",
+       "                          max_doc_update_iter=100, max_iter=10,\n",
+       "                          mean_change_tol=0.001, n_components=75, n_jobs=None,\n",
+       "                          perp_tol=0.1, random_state=None,\n",
+       "                          topic_word_prior=None, total_samples=1000000.0,\n",
+       "                          verbose=0)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = LatentDirichletAllocation(100)\n",
+    "model = LatentDirichletAllocation(75)\n",
     "model.fit(X_train)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,12 +123,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "pickle.dump( y_train, open( \"files/y_train.pickle\", \"wb\" ) )\n",
     "pickle.dump( y_test, open( \"files/y_test.pickle\", \"wb\" ) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_text(text):\n",
+    "    text_lc = \"\".join([word.lower() for word in text if word not in string.punctuation]) # remove puntuation\n",
+    "    text_rc = re.sub('[0-9]+', '', text_lc)\n",
+    "    tokens = nltk.word_tokenize(text_rc)   # tokenization\n",
+    "    tokens2 = [a[0] if a[1][0] is not 'N' else a[1] for a in nltk.pos_tag(tokens)]\n",
+    "    tokens = tokens + ['','','','',''] + tokens2\n",
+    "    text = [ps.stem(word) for word in tokens]\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyLDAvis\n",
+    "import pyLDAvis.sklearn\n",
+    "pyLDAvis.enable_notebook()\n",
+    "\n",
+    "pyLDAvis.sklearn.prepare(model, countVector, pickle.load( open( \"files/countVectorizer.pickle\", \"rb\" ) ), sort_topics=False)"
    ]
   },
   {
