--- a/Random Forest.ipynb
+++ b/Random Forest.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,80 +27,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\darin\\Anaconda3\\lib\\site-packages\\sklearn\\ensemble\\forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
-      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "0.9328322133271437"
+       "0.880486449450189"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = RandomForestClassifier()\n",
+    "model = RandomForestClassifier(n_estimators=10, max_depth=130)\n",
     "model.fit(XX_train, y_train)\n",
     "model.score(XX_test, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.dump( model, open( \"models/randforest.pickle\", \"wb\" ) )"
+    "pickle.dump( model, open( \"models/rf.pickle\", \"wb\" ) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "preds = model.predict_proba(XX_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.933362049533213"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "np.sum((preds[:,1]>0.485)==y_test)/y_test.shape[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pickle.dump( preds, open( \"models/predictions.pickle\", \"wb\" ) )"
    ]
   },
   {
