--- a/Logistic Regression.ipynb
+++ b/Logistic Regression.ipynb
@@ -9,8 +9,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tweets 8430264\n",
-      "Russian 2283309\n"
+      "tweets 5933852\n",
+      "Russian 1770487\n"
      ]
     }
    ],
@@ -19,13 +19,17 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "countVector = pickle.load( open( \"files/countVector.pickle\", \"rb\" ) )\n",
+    "\n",
+    "from sklearn.utils import resample\n",
     "\n",
     "\n",
     "df = pickle.load( open( \"files/df.pickle\", \"rb\" ) )\n",
     "df['Tweet'] = df['Tweet'].astype(str)\n",
-    "df['Len'] = df['Tweet'].str.split().apply(len)\n",
-    "df = df[df['Len']>=4]\n",
+    "df['Words'] = df['Tweet'].str.count(' ') + 1\n",
+    "df = df[df['Words']>=4]\n",
+    "\n",
+    "cv = pickle.load( open( \"models/countVectorizer1.pickle\", \"rb\" ) )\n",
+    "lda = pickle.load( open( \"models/lda_model.pickle\", \"rb\" ) )\n",
     "print('tweets',df.shape[0])\n",
     "print('Russian',np.sum(df['Category']))"
    ]
@@ -36,21 +40,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
+    "df_majority = df[df['Category']==0]\n",
+    "df_minority = df[df['Category']==1]\n",
+    "df_majority_downsampled = resample(df_majority, \n",
+    "                                 replace=False,    # sample without replacement\n",
+    "                                 n_samples=df_minority.shape[0],     # to match minority class\n",
+    "                                 random_state=123) # reproducible results\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(countVector, df['Category'])"
+    "df_downsampled = pd.concat([df_majority_downsampled, df_minority])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "ldaVector = lda.transform(cv.transform(df_downsampled['Processed']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(ldaVector, df_downsampled['Category'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9000434624585897 0.9001990922229719\n"
+      "0.671523460592756 0.6716137019849895\n"
      ]
     }
    ],
@@ -63,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,50 +102,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1, 430)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.coef_.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def clean_text(text):\n",
-    "    # @somone to @\n",
-    "    text = ' '.join(['@' if '@' in a else a for a in text.split(' ')])\n",
-    "    # text = ' '.join(['#' if '#' in a else a for a in text.split(' ')])\n",
-    "    # remove all punctuation except @ and #\n",
-    "    text = ''.join([word.lower() for word in text if word not in string.punctuation.replace('@','').replace('#','')])\n",
-    "    # remove numbers\n",
-    "    text = re.sub('[0-9]+', 'number', text)\n",
-    "    tokens = nltk.word_tokenize(text)\n",
-    "    tokens2 = [a[0] if '@' in a[0] or '#' in a[0] else a[1] for a in nltk.pos_tag(text.split())]\n",
-    "    # hastags only for grammer-check, none in words\n",
-    "    tokens = [a.replace('#','') for a in tokens]\n",
-    "    tokens2 = ['#' if '#' in a else a for a in tokens2]\n",
-    "    lst = []\n",
-    "    lst = [ps.stem(word) for word in tokens]\n",
-    "    for i in range(4):\n",
-    "        for a in nltk.ngrams([ps.stem(word) for word in tokens2],i+3):\n",
-    "            lst.append(' '.join(a))\n",
-    "    \n",
-    "    return lst"
+    "model.coef_.shape"
    ]
   },
   {
