--- a/[3] Count Vectorizer.ipynb
+++ b/[3] Count Vectorizer.ipynb
@@ -28,64 +28,64 @@
        "      <th></th>\n",
        "      <th>Tweet</th>\n",
        "      <th>Category</th>\n",
-       "      <th>Words</th>\n",
+       "      <th>Retweet</th>\n",
        "      <th>Processed</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>i love lebron. http://bit.ly/PdHur</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NN love NN NN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>@ludajuice Lebron is a Beast, but I'm still ch...</td>\n",
        "      <td>0</td>\n",
-       "      <td>14</td>\n",
-       "      <td>@ NN VBZ a NN but NN RB VBG CD the NN the NN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>JJ NN is a NN but NN RB cheering CD the NN the NN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>@wordwhizkid Lebron is a beast... nobody in th...</td>\n",
        "      <td>0</td>\n",
-       "      <td>12</td>\n",
-       "      <td>@ NN VBZ a NN NN in the NN VBZ RB JJ</td>\n",
+       "      <td>False</td>\n",
+       "      <td>JJ NN is a NN NN in the NN comes RB JJ</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>By the way, I'm totally inspired by this freak...</td>\n",
+       "      <th>3</th>\n",
+       "      <td>Bill Simmons in conversation with Malcolm Glad...</td>\n",
        "      <td>0</td>\n",
-       "      <td>12</td>\n",
-       "      <td>by the NN NN RB VBN by this JJ JJ JJ NN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NN NNS in NN with NN NN NN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>omgg i ohhdee want mcdonalds damn i wonder if ...</td>\n",
+       "      <th>4</th>\n",
+       "      <td>playing with Java and the Twitter API</td>\n",
        "      <td>0</td>\n",
-       "      <td>13</td>\n",
-       "      <td>NN NNS VBP VBP NNS VB JJ NN if PRP$ JJ NN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Dick Cheney's dishonest speech about torture, ...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>13</td>\n",
-       "      <td>JJ NNS JJS NN about NN NN and NN VBD JJ NN NN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>playing with NN and the NN NN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                               Tweet  Category  Words  \\\n",
-       "1  @ludajuice Lebron is a Beast, but I'm still ch...         0     14   \n",
-       "2  @wordwhizkid Lebron is a beast... nobody in th...         0     12   \n",
-       "5  By the way, I'm totally inspired by this freak...         0     12   \n",
-       "6  omgg i ohhdee want mcdonalds damn i wonder if ...         0     13   \n",
-       "7  Dick Cheney's dishonest speech about torture, ...         0     13   \n",
+       "                                               Tweet  Category  Retweet  \\\n",
+       "0                 i love lebron. http://bit.ly/PdHur         0    False   \n",
+       "1  @ludajuice Lebron is a Beast, but I'm still ch...         0    False   \n",
+       "2  @wordwhizkid Lebron is a beast... nobody in th...         0    False   \n",
+       "3  Bill Simmons in conversation with Malcolm Glad...         0    False   \n",
+       "4              playing with Java and the Twitter API         0    False   \n",
        "\n",
-       "                                       Processed  \n",
-       "1   @ NN VBZ a NN but NN RB VBG CD the NN the NN  \n",
-       "2           @ NN VBZ a NN NN in the NN VBZ RB JJ  \n",
-       "5        by the NN NN RB VBN by this JJ JJ JJ NN  \n",
-       "6      NN NNS VBP VBP NNS VB JJ NN if PRP$ JJ NN  \n",
-       "7  JJ NNS JJS NN about NN NN and NN VBD JJ NN NN  "
+       "                                           Processed  \n",
+       "0                                      NN love NN NN  \n",
+       "1  JJ NN is a NN but NN RB cheering CD the NN the NN  \n",
+       "2             JJ NN is a NN NN in the NN comes RB JJ  \n",
+       "3                         NN NNS in NN with NN NN NN  \n",
+       "4                      playing with NN and the NN NN  "
       ]
      },
      "execution_count": 1,
@@ -104,8 +104,6 @@
     "\n",
     "\n",
     "df = pickle.load( open( \"files/df.pickle\", \"rb\" ) )\n",
-    "df['Words'] = df['Tweet'].str.count(' ') + 1\n",
-    "df = df[df['Words']>=4]\n",
     "df.head()"
    ]
   },
@@ -118,21 +116,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5933852 Number of tweets has 3014 cols and took 261 s\n"
+      "8961258 Number of tweets has 5688 cols and took 505 s\n"
      ]
     }
    ],
    "source": [
     "import pickle\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
     "\n",
     "# run a countvectorizer on everything\n",
     "start = time.time()\n",
-    "countVectorizer1 = CountVectorizer(ngram_range=(4,4)\n",
-    "                                  , max_df = .25\n",
-    "                                  , min_df = .0005\n",
-    "                                 )\n",
+    "countVectorizer1 =  TfidfVectorizer(ngram_range=(4,4)\n",
+    "                                    , min_df = 1000\n",
+    "                                   )\n",
     "countVectorizer1.fit(df['Processed'])\n",
     "\n",
     "\n",
@@ -153,7 +150,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pickl"
+   ]
   }
  ],
  "metadata": {
