--- a/[4] LDA.ipynb
+++ b/[4] LDA.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
     "\n",
-    "countVector = pickle.load( open( \"files/countVector1.pickle\", \"rb\" ) )"
+    "countVectorizer1 = pickle.load( open( \"models/countVectorizer1.pickle\", \"rb\" ) )\n",
+    "countVectorizer1.stop_words_ = None\n",
+    "pickle.dump( countVectorizer1, open( \"models/countVectorizer1.pickle\", \"wb\" ) )"
    ]
   },
   {
@@ -19,7 +21,7 @@
     {
      "data": {
       "text/plain": [
-       "(5933852, 3014)"
+       "(8961258, 16576964)"
       ]
      },
      "execution_count": 2,
@@ -40,8 +42,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tweets 5933852\n",
-      "Russian 1770487\n"
+      "tweets 8488073\n",
+      "Russian 2285628\n"
      ]
     }
    ],
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
