--- a/[2] Preprocessor.ipynb
+++ b/[2] Preprocessor.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -106,9 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -132,9 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -155,9 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -177,9 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def preprocess_text(series):\n",
@@ -195,19 +185,18 @@
     "\n",
     "        # the real work, pos tagged only\n",
     "        \n",
-    "        tokens = [a[0] if '@' in a[0] or '#' in a[0] or 'IN' in a[1] or 'N' not in a[1]\n",
-    "                    else a[1] for a in nltk.pos_tag(text.split())]\n",
-    "       \n",
+    "        tokens = [a[0] if 'IN' in a[1] or 'V' in a[1] or 'DT' in a[1] or 'CC' in a[1] \n",
+    "                  or 'MD' in a[1] or 'PDT' in a[1]\n",
+    "                  else a[1] for a in nltk.pos_tag(text.split())]\n",
+    "\n",
     "        lst.append(' '.join(tokens))\n",
     "    return lst "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -249,14 +238,14 @@
        "      <td>@ludajuice Lebron is a Beast, but I'm still ch...</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>@ NN is a NN but NN still cheering 4 the NN th...</td>\n",
+       "      <td>JJ NN is a NN but NN RB cheering CD the NN the NN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>@wordwhizkid Lebron is a beast... nobody in th...</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>@ NN is a NN NN in the NN comes even close</td>\n",
+       "      <td>JJ NN is a NN NN in the NN comes RB JJ</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -286,8 +275,8 @@
        "\n",
        "                                           Processed  \n",
        "0                                      NN love NN NN  \n",
-       "1  @ NN is a NN but NN still cheering 4 the NN th...  \n",
-       "2         @ NN is a NN NN in the NN comes even close  \n",
+       "1  JJ NN is a NN but NN RB cheering CD the NN the NN  \n",
+       "2             JJ NN is a NN NN in the NN comes RB JJ  \n",
        "3                         NN NNS in NN with NN NN NN  \n",
        "4                      playing with NN and the NN NN  "
       ]
@@ -306,11 +295,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It took 9619.119096755981 s to process/pos-tag the tweets.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Tweet</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Retweet</th>\n",
+       "      <th>Processed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>i love lebron. http://bit.ly/PdHur</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NN love NN NN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>@ludajuice Lebron is a Beast, but I'm still ch...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>JJ NN is a NN but NN RB cheering CD the NN the NN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>@wordwhizkid Lebron is a beast... nobody in th...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>JJ NN is a NN NN in the NN comes RB JJ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Bill Simmons in conversation with Malcolm Glad...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NN NNS in NN with NN NN NN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>playing with Java and the Twitter API</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>playing with NN and the NN NN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               Tweet  Category  Retweet  \\\n",
+       "0                 i love lebron. http://bit.ly/PdHur         0    False   \n",
+       "1  @ludajuice Lebron is a Beast, but I'm still ch...         0    False   \n",
+       "2  @wordwhizkid Lebron is a beast... nobody in th...         0    False   \n",
+       "3  Bill Simmons in conversation with Malcolm Glad...         0    False   \n",
+       "4              playing with Java and the Twitter API         0    False   \n",
+       "\n",
+       "                                           Processed  \n",
+       "0                                      NN love NN NN  \n",
+       "1  JJ NN is a NN but NN RB cheering CD the NN the NN  \n",
+       "2             JJ NN is a NN NN in the NN comes RB JJ  \n",
+       "3                         NN NNS in NN with NN NN NN  \n",
+       "4                      playing with NN and the NN NN  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pickle\n",
     "start = time.time()\n",
@@ -320,21 +402,12 @@
     "pickle.dump( df, open( \"files/df.pickle\", \"wb\" ) )\n",
     "df.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -348,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
