--- a/[4] LDA.ipynb
+++ b/[4] LDA.ipynb
@@ -2,96 +2,117 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle\n",
-    "\n",
-    "countVectorizer1 = pickle.load( open( \"models/countVectorizer1.pickle\", \"rb\" ) )\n",
-    "countVectorizer1.stop_words_ = None\n",
-    "pickle.dump( countVectorizer1, open( \"models/countVectorizer1.pickle\", \"wb\" ) )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(8961258, 16576964)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "countVector.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tweets 8488073\n",
-      "Russian 2285628\n"
+      "tweets 8961258\n",
+      "Russian 2365553\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import pickle\n",
     "\n",
     "df = pickle.load( open( \"files/df.pickle\", \"rb\" ) )\n",
-    "df['Tweet'] = df['Tweet'].astype(str)\n",
-    "df['Words'] = df['Tweet'].str.count(' ') + 1\n",
-    "df = df[df['Words']>=4]\n",
-    "df.head()\n",
+    "\n",
     "print('tweets',df.shape[0])\n",
     "print('Russian',np.sum(df['Category']))"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\darin\\Anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:2010: FutureWarning: From version 0.21, test_size will always complement train_size unless both are specified.\n",
+      "  FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(236556,)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "_, X, _, y = train_test_split(df[df['Category']==1]['Processed'], df[df['Category']==1]['Category'], train_size=0.9)\n",
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\darin\\Anaconda3\\lib\\site-packages\\sklearn\\base.py:312: UserWarning: Trying to unpickle estimator TfidfTransformer from version 0.22.1 when using version 0.19.0. This might lead to breaking code or invalid results. Use at your own risk.\n",
+      "  UserWarning)\n",
+      "C:\\Users\\darin\\Anaconda3\\lib\\site-packages\\sklearn\\base.py:312: UserWarning: Trying to unpickle estimator TfidfVectorizer from version 0.22.1 when using version 0.19.0. This might lead to breaking code or invalid results. Use at your own risk.\n",
+      "  UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "from sklearn.decomposition import LatentDirichletAllocation\n",
     "\n",
+    "topics = 56\n",
+    "\n",
     "start = time.time()\n",
     "cv = pickle.load( open( \"models/countVectorizer1.pickle\", \"rb\" ) )\n",
-    "model = LatentDirichletAllocation(50, max_iter=10, n_jobs=-1)\n",
+    "model = LatentDirichletAllocation(topics, max_iter=10, n_jobs=-1)\n",
     "model.fit(cv.transform(df[df['Category']==1]['Processed']), df[df['Category']==1]['Category'])\n",
     "\n",
     "end = time.time()\n",
-    "print('{} Number of tweets took {:.0f} s'.format(countVector.shape[0],end-start))"
+    "print('{} Number of tweets took {:.0f} s'.format(countVector.shape[0],end-start))\n",
+    "pickle.dump( model, open( \"models/lda_model_{}.pickle\".format(topics), \"wb\" ) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pickle.dump( model, open( \"models/lda_model.pickle\", \"wb\" ) )\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'train_test_split' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-c70046258dab>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[1;31m# _, X, _, _ = train_test_split(df[df['Category']==1]['Processed'], df[df['Category']==1]['Category'])\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0m_\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Processed'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Category'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Category'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'train_test_split' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# _, X, _, _ = train_test_split(df[df['Category']==1]['Processed'], df[df['Category']==1]['Category'])\n",
     "_, X, _, _ = train_test_split(df['Processed'], df[df['Category']==1]['Category'])\n",
@@ -102,7 +123,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pyLDAvis\n",
@@ -115,14 +138,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!pip install sklearn -U"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -136,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
