--- a/Logistic Regression.ipynb
+++ b/Logistic Regression.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tweets 5933852\n",
-      "Russian 1770487\n"
+      "tweets 8488073\n",
+      "Russian 2285628\n"
      ]
     }
    ],
@@ -28,15 +28,13 @@
     "df['Words'] = df['Tweet'].str.count(' ') + 1\n",
     "df = df[df['Words']>=4]\n",
     "\n",
-    "cv = pickle.load( open( \"models/countVectorizer1.pickle\", \"rb\" ) )\n",
-    "lda = pickle.load( open( \"models/lda_model.pickle\", \"rb\" ) )\n",
     "print('tweets',df.shape[0])\n",
     "print('Russian',np.sum(df['Category']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,46 +42,69 @@
     "df_minority = df[df['Category']==1]\n",
     "df_majority_downsampled = resample(df_majority, \n",
     "                                 replace=False,    # sample without replacement\n",
-    "                                 n_samples=df_minority.shape[0],     # to match minority class\n",
-    "                                 random_state=123) # reproducible results\n",
+    "                                 n_samples=df_minority.shape[0]    # to match minority class\n",
+    "                                 ) \n",
     "\n",
     "df_downsampled = pd.concat([df_majority_downsampled, df_minority])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "cv = pickle.load( open( \"models/countVectorizer.pickle\", \"rb\" ) )\n",
     "\n",
-    "ldaVector = lda.transform(cv.transform(df_downsampled['Processed']))"
+    "#cv0 = pickle.load( open( \"models/countVectorizer1.pickle\", \"rb\" ) )\n",
+    "\n",
+    "\n",
+    "countVector = cv.transform(df_downsampled['Processed'])\n",
+    "#countVector0 = cv1.transform(df_downsampled['Processed'])\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Using backend LokyBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.6min finished\n"
+     ]
+    }
+   ],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
+    "lda = pickle.load( open( \"models/lda_model.pickle\", \"rb\" ) )\n",
+    "#lda1 = pickle.load( open( \"models/lda_model1.pickle\", \"rb\" ) )\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(ldaVector, df_downsampled['Category'])"
+    "ldaVector = lda.transform(countVector)\n",
+    "#ldaVector0 = lda0.transform(countVector)\n",
+    "\n",
+    "#ldaVector = np.concatenate((ldaVector0,ldaVector1),axis=1)\n",
+    "#ldaVector = ldaVector1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.671523460592756 0.6716137019849895\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(countVector, df_downsampled['Category'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "model = LogisticRegression(max_iter=1000)\n",
@@ -93,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,11 +123,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 50)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.coef_.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1142814, 50)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test.shape"
    ]
   },
   {
