--- a/[2] Preprocessor.ipynb
+++ b/[2] Preprocessor.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -106,9 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -132,9 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -155,9 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -176,28 +168,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def preprocess_text(series):\n",
     "     # @somone to @\n",
     "    lst = []\n",
     "    for text in series:\n",
-    "         # remove all punctuation except @ and #\n",
-    "        text = ' '.join(['@' if '@' in word else word for word in text.split()])\n",
-    "        \n",
-    "        text = ' '.join(['#' if '#' in word else word for word in text.split()])\n",
-    "        text = ''.join([word.lower() for word in text if word not in string.punctuation.replace('@','').replace('#','')])\n",
+    "         # mark @, # and links\n",
+    "        text = ' '.join(['_at_someone_' if '@' in word else word for word in text.split()])\n",
+    "        text = ' '.join(['_link_' if 'http' in word or 'www.' in word else word for word in text.split()])\n",
+    "        text = ' '.join(['_hashtag_' if '#' in word else word for word in text.split()])\n",
+    "        # remove all other punctuation\n",
+    "        text = ''.join([word.lower() for word in text if word not in string.punctuation.replace('@','').replace('#','').replace('_','')])\n",
     "\n",
-    "\n",
-    "        # the real work, pos tagged only\n",
-    "        \n",
-    "        tokens = [a[0] if 'IN' in a[1] or 'V' in a[1] or 'DT' in a[1] or 'CC' in a[1] \n",
-    "                  or 'MD' in a[1] or 'PDT' in a[1]\n",
-    "                  else a[1] for a in nltk.pos_tag(text.split())]\n",
+    "        # the real work, pos tagging to reduce Nouns and other things that don't matter\n",
+    "        tokens = []\n",
+    "        for a in nltk.pos_tag(text.split()):\n",
+    "            # keep these as-is for reasons\n",
+    "            if '_link_' in a[0] or '_at_someone_' in a[0] or '_hashtag_' in a[0]:\n",
+    "                tokens.append(a[0])\n",
+    "            # lemmatize these to reduce parts of speach issues\n",
+    "            elif 'IN' in a[1] or 'V' in a[1] or 'DT' in a[1] or 'CC' in a[1] or 'MD' in a[1] or 'PDT' in a[1]:\n",
+    "                tokens.append(nltk.PorterStemmer().stem(a[0]))\n",
+    "            else:\n",
+    "                tokens.append(a[1])\n",
     "\n",
     "        lst.append(' '.join(tokens))\n",
     "    return lst "
@@ -205,10 +202,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -243,35 +238,35 @@
        "      <td>i love lebron. http://bit.ly/PdHur</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>NN love NN NN</td>\n",
+       "      <td>NN love NN _link_</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>@ludajuice Lebron is a Beast, but I'm still ch...</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>JJ NN is a NN but NN RB cheering CD the NN the NN</td>\n",
+       "      <td>_at_someone_ NN is a NN but NN RB cheer CD the...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>@wordwhizkid Lebron is a beast... nobody in th...</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>JJ NN is a NN NN in the NN comes RB JJ</td>\n",
+       "      <td>_at_someone_ NN is a NN NN in the NN come RB JJ</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Bill Simmons in conversation with Malcolm Glad...</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>NN NNS in NN with NN NN NN</td>\n",
+       "      <td>NN NNS in NN with NN NN _link_</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>playing with Java and the Twitter API</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>playing with NN and the NN NN</td>\n",
+       "      <td>play with NN and the NN NN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -286,14 +281,14 @@
        "4              playing with Java and the Twitter API         0    False   \n",
        "\n",
        "                                           Processed  \n",
-       "0                                      NN love NN NN  \n",
-       "1  JJ NN is a NN but NN RB cheering CD the NN the NN  \n",
-       "2             JJ NN is a NN NN in the NN comes RB JJ  \n",
-       "3                         NN NNS in NN with NN NN NN  \n",
-       "4                      playing with NN and the NN NN  "
+       "0                                  NN love NN _link_  \n",
+       "1  _at_someone_ NN is a NN but NN RB cheer CD the...  \n",
+       "2    _at_someone_ NN is a NN NN in the NN come RB JJ  \n",
+       "3                     NN NNS in NN with NN NN _link_  \n",
+       "4                         play with NN and the NN NN  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,16 +302,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "It took 9619.119096755981 s to process/pos-tag the tweets.\n"
+      "It took 12106.464388847351 s to process/pos-tag the tweets.\n"
      ]
     },
     {
@@ -352,35 +345,35 @@
        "      <td>i love lebron. http://bit.ly/PdHur</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>NN love NN NN</td>\n",
+       "      <td>NN love NN _link_</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>@ludajuice Lebron is a Beast, but I'm still ch...</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>JJ NN is a NN but NN RB cheering CD the NN the NN</td>\n",
+       "      <td>_at_someone_ NN is a NN but NN RB cheer CD the...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>@wordwhizkid Lebron is a beast... nobody in th...</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>JJ NN is a NN NN in the NN comes RB JJ</td>\n",
+       "      <td>_at_someone_ NN is a NN NN in the NN come RB JJ</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Bill Simmons in conversation with Malcolm Glad...</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>NN NNS in NN with NN NN NN</td>\n",
+       "      <td>NN NNS in NN with NN NN _link_</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>playing with Java and the Twitter API</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>playing with NN and the NN NN</td>\n",
+       "      <td>play with NN and the NN NN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -395,14 +388,14 @@
        "4              playing with Java and the Twitter API         0    False   \n",
        "\n",
        "                                           Processed  \n",
-       "0                                      NN love NN NN  \n",
-       "1  JJ NN is a NN but NN RB cheering CD the NN the NN  \n",
-       "2             JJ NN is a NN NN in the NN comes RB JJ  \n",
-       "3                         NN NNS in NN with NN NN NN  \n",
-       "4                      playing with NN and the NN NN  "
+       "0                                  NN love NN _link_  \n",
+       "1  _at_someone_ NN is a NN but NN RB cheer CD the...  \n",
+       "2    _at_someone_ NN is a NN NN in the NN come RB JJ  \n",
+       "3                     NN NNS in NN with NN NN _link_  \n",
+       "4                         play with NN and the NN NN  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,26 +409,21 @@
     "pickle.dump( df, open( \"files/df.pickle\", \"wb\" ) )\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
   }
  },
  "nbformat": 4,
