--- a/[3] Count Vectorizer, Scaler, and Logistic Regression.ipynb
+++ b/[3] Count Vectorizer, Scaler, and Logistic Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        "4                         play with NN and the NN NN  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "(1730344,)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "(1730343,)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "(3460687,)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3460687 Number of tweets has 16107 cols and took 317 s\n"
+      "3460687 Number of tweets has 16145 cols and took 338 s\n"
      ]
     }
    ],
@@ -225,7 +225,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3460687 Number of tweets has 16107 cols and took 129 s\n"
+      "3460687 Number of tweets has 16145 cols and took 176 s\n"
      ]
     }
    ],
@@ -259,7 +259,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8959755578372693 0.8937956845575216 Took 1575.8095355033875 s\n"
+      "0.8964128506288732 0.8932027388773561 Took 1356.841005563736 s\n"
      ]
     }
    ],
@@ -281,7 +281,7 @@
     {
      "data": {
       "text/plain": [
-       "0.909751167304752"
+       "0.9093540982390492"
       ]
      },
      "execution_count": 8,
@@ -300,6 +300,76 @@
    "outputs": [],
    "source": [
     "pickle.dump( model, open( \"models/regression.pickle\", \"wb\" ) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv = pickle.load( open( \"models/countVectorizer.pickle\", \"rb\" ) )\n",
+    "scaler = pickle.load( open( \"models/scaler.pickle\", \"rb\" ) )\n",
+    "lr = pickle.load( open( \"models/regression.pickle\", \"rb\" ) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_score = lr.predict_proba(scaler.transform(cv.transform(np.concatenate((Xh0,Xh1), axis=0))))\n",
+    "\n",
+    "y_test = np.concatenate((yh0,yh1), axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import roc_curve, auc\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n",
+    "fpr, tpr, _ = roc_curve(y_test, y_score[:,1])\n",
+    "roc_auc = auc(fpr,tpr)\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.plot(fpr,tpr,color='b',label='ROC Curve {:.3f}'.format(roc_auc))\n",
+    "plt.plot([0,1],[0,1],color='k',linestyle='--')\n",
+    "plt.xlim([0,1])\n",
+    "plt.ylim(0,1.01)\n",
+    "plt.xlabel('False Positive Rate')\n",
+    "plt.ylabel('True Positive Rate')\n",
+    "plt.title('Reciever-Operator Curve')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores = []\n",
+    "threshold = [0.1*a for a in range(101)]\n",
+    "for th in threshold:\n",
+    "    scores.append(np.sum((y_score[:,1]>=th)==y_test)/y_test.shape[0])\n",
+    "plt.figure()\n",
+    "plt.plot(threshold,scores, label='Best Score {:.3f} at {:.2f}'.format(np.max(scores), threshold[scores.index(np.max(scores))]))\n",
+    "plt.hlines(0.5,0,1,color='k',linestyle='--')\n",
+    "plt.xlim([0,1])\n",
+    "plt.ylim(0,1.01)\n",
+    "plt.xlabel('Threshold of Predict_Proba[Russian]')\n",
+    "plt.ylabel('Score')\n",
+    "plt.title('Threshold Exploration')\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
